[gd_scene load_steps=2 format=3 uid="uid://c8xr7ywqkxbvn"]

[ext_resource type="Script" path="res://tests/integration_game_over_ui_test.gd" id="1_integration_test"]

[node name="IntegrationGameOverUITest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_integration_test")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TestLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "GameOver UI Integration Test"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Integration Test"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Ready to test GameOver UI integration"
horizontal_alignment = 1
autowrap_mode = 3
theme_override_font_sizes/font_size = 12

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="GameOverContainer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="InstructionsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Manual Testing: Press 1 for valid name, 2 for invalid name, 3 for skip test"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 10
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)